<resources>
    <string name="app_name">Red Rocket</string>

    <string name="text_favorites">Favorites</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_music">Music</string>
    <string name="text_play">Play</string>
    <string name="text_shops">Shops</string>
    <string name="text_league">League</string>
    <string name="text_options">Options</string>
    <string name="text_info">Info</string>
    <string name="text_win">YOU WIN !!</string>
    <string name="text_lose">YOU LOSE !!</string>
    <string name="text_tie">TIE !!</string>
    <string name="facebook_app_id">1055321587910260</string>
    <string name="logout">Logout</string>
    <string name="your_password">Your Password</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="your_nickname">Your nickname</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="leaest_6_characters">Leaest 6 Characters</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_sorry">Sorry !!</string>
    <string name="text_no_ranking">No ranking yet</string>
    <string name="text_ok">OK</string>

    <string name="AlertButtonConfirm">OK</string>
    <string name="AlertMessageEmailAlreadyInUse">Email Already In Use</string>
    <string name="AlertMessageSystemError">We’re sorry...Something is wrong here.</string>
    <string name="AlertMessageWrongPassword">Wrong Password</string>
    <string name="BarButtonItemSend">Send</string>
    <string name="PasswordAuthenticationRowPlaceholderConfirmPassword">retype your password</string>
    <string name="PasswordAuthenticationRowPlaceholderDisplayName">Your nickname</string>
    <string name="PasswordAuthenticationRowPlaceholderEmail">Your email</string>
    <string name="PasswordAuthenticationRowPlaceholderNewPassword">at least 6 characters</string>
    <string name="PasswordAuthenticationRowPlaceholderPassword">Your password</string>
    <string name="PasswordAuthenticationRowTitleConfirmPassword">Confirm password</string>
    <string name="PasswordAuthenticationRowTitleDisplayName">Display Name</string>
    <string name="PasswordAuthenticationRowTitleEmail">Email</string>
    <string name="PasswordAuthenticationRowTitleForgotPassword">Forgot password</string>
    <string name="PasswordAuthenticationRowTitlePassword">Password</string>
    <string name="PlayButtonAuto">AUTO</string>
    <string name="PlayTitleBuyMore">BUY MORE</string>
    <string name="PlayTitleCoins">COINS</string>
    <string name="PlayTitleLives">LIVES</string>
    <string name="PlayTitleScore">SCORE</string>
    <string name="TabBarItemInfo">Info</string>
    <string name="TabBarItemLeague">League</string>
    <string name="TabBarItemOptions">Options</string>
    <string name="TabBarItemPlay">Play</string>
    <string name="TabBarItemShops">Shops</string>
    <string name="WelcomeButtonSignIn">Login</string>
    <string name="WelcomeButtonSignUp">Signup</string>
    <string name="content_description_app_loading_image">App loading image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
