<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e6f9f9f9"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">



    </android.support.v7.widget.Toolbar>

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:layout_above="@+id/editTxtEmail"
        android:background="#00000000"
        android:layout_alignParentStart="true"
        android:width="53dp"
        android:height="20dp"
        android:layout_marginLeft="8dp"
        android:textColor="#ef3d4f"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/WelcomeButtonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/txtViewSignup"
        android:width="50dp"
        android:height="20dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        tools:ignore="SpUsage" />

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTxtEmail"
        android:background="#00000000"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnDone"
        android:width="53dp"
        android:height="20dp"
        android:layout_marginRight="8dp"
        android:textColor="#ef3d4f"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTxtEmail"
        android:hint="@string/PasswordAuthenticationRowPlaceholderEmail"
        android:textCursorDrawable="@null"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentEnd="true"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/editTxtNickName"
        android:ems="10"
        android:hint="@string/PasswordAuthenticationRowPlaceholderDisplayName"
        android:textCursorDrawable="@null"
        android:layout_below="@+id/editTxtEmail"
        android:layout_alignParentEnd="true"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTxtPassword"
        android:hint="@string/PasswordAuthenticationRowPlaceholderNewPassword"
        android:textCursorDrawable="@null"
        android:layout_below="@+id/editTxtNickName"
        android:layout_alignParentEnd="true"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"/>

    <TextView
        android:text="@string/PasswordAuthenticationRowTitleEmail"
        android:layout_width="150dp"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtViewScores"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"
        android:paddingLeft="3dp"
        android:layout_above="@+id/editTxtNickName" />

    <TextView
        android:text="@string/PasswordAuthenticationRowTitleConfirmPassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@+id/editTxtPassword"
        android:id="@+id/textViewConfirmPassword"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/editTxtConfirmPassword"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:paddingLeft="3dp"
        android:textStyle="normal"/>

    <TextView
        android:text="@string/PasswordAuthenticationRowTitleDisplayName"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/textViewNickname"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"
        android:layout_below="@+id/txtViewScores"
        android:layout_alignParentStart="true"
        android:paddingLeft="3dp"
        android:layout_above="@+id/editTxtPassword" />

    <TextView
        android:text="@string/PasswordAuthenticationRowTitlePassword"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/textViewPassword"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textViewConfirmPassword"
        android:layout_below="@+id/textViewNickname"
        android:paddingLeft="3dp"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTxtConfirmPassword"
        tools:ignore="LabelFor"
        android:hint="@string/PasswordAuthenticationRowPlaceholderConfirmPassword"
        android:textCursorDrawable="@null"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"
        android:layout_below="@+id/editTxtPassword"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
