<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e6f9f9f9"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toolbar2" />

    <Button
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:layout_alignBottom="@+id/toolbar2"
        android:layout_alignParentEnd="true"
        android:background="#00000000"
        android:width="53dp"
        android:height="20dp"
        android:layout_marginRight="8dp"
        android:textColor="#ef3d4f"
        android:textSize="12sp"
        tools:ignore="RelativeOverlap,RtlHardcoded" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_alignBottom="@+id/toolbar2"
        android:layout_alignParentStart="true"
        android:background="#00000000"
        android:width="53dp"
        android:height="20dp"
        android:layout_marginLeft="8dp"
        android:textColor="#ef3d4f"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignBaseline="@+id/button6"
        android:layout_alignBottom="@+id/button6"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:maxLines="1"
        android:textSize="12sp"
        android:textColor="@android:color/black"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:maxLines="1"
        android:textCursorDrawable="@null"
        tools:layout_alignParentStart="false"
        android:hint="@string/your_e_mail"
        android:layout_below="@+id/toolbar2"
        android:layout_alignParentEnd="true"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:textCursorDrawable="@null"
        android:maxLines="1"
        android:hint="@string/your_password"
        android:layout_below="@+id/editText"
        android:layout_alignParentEnd="true"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"/>

    <TextView
        android:text="@string/email"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@+id/toolbar2"
        android:layout_alignParentStart="true"
        android:id="@+id/textView6"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/editText"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"/>

    <TextView
        android:text="@string/password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/textView6"
        android:id="@+id/textView7"
        android:textSize="12sp"
        android:layout_alignBottom="@+id/editText2"
        android:fontFamily="sans-serif"
        android:textColor="#574751"
        android:textStyle="normal"/>


</RelativeLayout>
