<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.juicesoft.redpocket.LeagueFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:background="@color/colorFragmentTitle"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/TabBarItemLeague" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:id="@+id/imgViewNoLeague"
                app:srcCompat="@drawable/no_league_message_icon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:visibility="invisible" />
            <TextView
                android:text="@string/text_sorry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:id="@+id/txtViewSorry"
                android:layout_below="@+id/imgViewNoLeague"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:visibility="invisible" />
            <TextView
                android:text="@string/text_no_ranking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:textAlignment="center"
                android:id="@+id/txtViewNoRanking"
                android:layout_below="@+id/txtViewSorry"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:visibility="invisible" />
            <TextView
                android:text="Update time: 2017/1/11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGray10"
                android:textSize="13sp"
                android:textAlignment="center"
                android:id="@+id/txtViewUpdateTime"
                android:layout_below="@+id/txtViewNoRanking"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:visibility="invisible" />


            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="10dp"
                android:id="@+id/listViewLeague"/>

        </RelativeLayout>


    </LinearLayout>

</FrameLayout>
